# copy_trade

./: .env.example  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8eae8e13c6a0_initial.py  a9c1d5e78f02_add_trader_quality_metrics.py  c3d4e5f6a7b8_add_subscription_sizing_fields.py  d1e2f3a4b5c6_add_sharpe_sortino.py  e5f6g7h8i9j0_add_trade_type_realized_pnl.py  f0g1h2i3j4k5_add_portfolio_stop_loss.py  g1h2i3j4k5l6_add_builder_fee_approved_at.py  h2i3j4k5l6m7_add_is_demo_flag.py  i3j4k5l6m7n8_add_setup_nonce_to_user_agents.py  j4k5l6m7n8o9_add_trader_scoring_metrics.py  k5l6m7n8o9p0_add_active_trading_days.py  l6m7n8o9p0q1_add_avg_leverage.py  m7n8o9p0q1r2_add_human_score.py  n8o9p0q1r2s3_add_has_perp_activity.py  o1p2q3r4s5t6_add_model_portfolio_tables.py  p2q3r4s5t6u7_add_portfolio_reports.py  q3r4s5t6u7v8_add_portfolio_execution_guards.py  r4s5t6u7v8w9_add_new_wallet_discovery.py  s5t6u7v8w9x0_add_new_wallet_subscribe_all_new.py
backend/app/: main.py
backend/app/api/: admin_traders.py  auth.py  demo.py  deps.py  new_wallets.py  portfolio_billing.py  portfolio_subscriptions.py  portfolios.py  router.py  subscriptions.py  telegram.py  traders.py  wallet.py  ws_traders.py
backend/app/core/: cache.py  clickhouse_client.py  config.py  database.py  logging.py  rate_limit.py  redis_client.py  scheduler.py  security.py
backend/app/models/: __init__.py  new_wallet.py  portfolio.py  signal.py  subscription.py  trade.py  trader.py  user.py
backend/app/schemas/: auth.py  new_wallet.py  portfolio.py  subscription.py  trader.py  wallet.py
backend/app/services/: admin_trader_import.py  demo_service.py  risk_manager.py  signal_detector.py  signal_publisher.py  subscription_service.py
backend/scripts/: build_model_portfolio_draft.py  publish_model_portfolio_version.py  run_model_portfolio_backtest.py  seed_model_portfolios.py  validate_hl_signing.py
backend/tests/: conftest.py
(+138 files in other folders)
