[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "copy-trade-backend"
version = "0.1.0"
description = "Copy-trade service — Hyperliquid analytics + automated order execution via Telegram Mini App"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    # Validation & Config
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Scheduler
    "apscheduler>=3.10",
    "redis[hiredis]>=5.2",
    # HTTP Client
    "httpx>=0.28",
    "tenacity>=9.0",
    # Logging
    "structlog>=24.4",
    # Crypto / Security
    "cryptography>=43.0",
    "python-jose[cryptography]>=3.3",
    "eth-account>=0.13",
    # Telegram
    "aiogram>=3.14",
    # Hyperliquid signing
    "msgpack>=1.0",
    "slowapi>=0.1.10",
]


[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
    "black>=24.10",
    "types-redis",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "PIE", "T20", "RET", "SIM"]
ignore = ["S101", "B008", "RET504", "UP047"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "T20", "E501"]
"alembic/*" = ["F401", "E501", "W291"]
"app/models/*" = ["F821"]
"scripts/*" = ["T20", "S", "E501", "E402", "I001"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["alembic/*", "tests/*"]
